--- a/app/src/main/res/layout/content_remedios.xml
+++ b/app/src/main/res/layout/content_remedios.xml
@@ -19,6 +19,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="@string/title_activity_remedios"
+            android:textColor="@color/colorPatternApp"
             android:textSize="30sp"/>
 
         <SearchView
