--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -7,7 +7,7 @@
     <color name="colorPatternApp">#4388CC</color>
     <color name="colorPatternButton">#59C1E8</color>
     <color name="colorPatternLight">#FAFAFA</color>
-    <color name="colorTarjaVermelha">#EE4035</color>
+    <color name="colorTarjaVermelha">#FF0000</color>
     <color name="colorTarjaPreta">#000000</color>
-    <color name="colorTarjaAmarela">#F9ED3A</color>
+    <color name="colorTarjaBranca">#FFFFFF</color>
 </resources>
