--- a/app/src/main/res/layout/menu_layout.xml
+++ b/app/src/main/res/layout/menu_layout.xml
@@ -12,19 +12,11 @@
     tools:context="com.example.doug.healthoclock.controller.MenuActivity">
 
 
-    <LinearLayout
+    <Space
         android:layout_width="match_parent"
         android:layout_height="0dp"
-        android:layout_weight="5"
-        android:orientation="horizontal"
-        android:gravity="center">
-        <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="@string/menuactivity_title"
-            android:textSize="30sp"/>
-    </LinearLayout>
-
+        android:layout_weight="5">
+    </Space>
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="0dp"
