--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -3,11 +3,13 @@
     <color name="colorPrimary">#3F51B5</color>
     <color name="colorPrimaryWhite">#FFFFFF</color>
     <color name="colorPrimaryDark">#303F9F</color>
+    <color name="colorPrimaryBlack">#000000</color>
     <color name="colorAccent">#FF4081</color>
     <color name="colorPatternApp">#4388CC</color>
-    <color name="colorPatternButton">#59C1E8</color>
+    <color name="colorPatternButton">#59c1e8</color>
     <color name="colorPatternLight">#FAFAFA</color>
     <color name="colorTarjaVermelha">#FF0000</color>
     <color name="colorTarjaPreta">#000000</color>
     <color name="colorTarjaBranca">#FFFFFF</color>
+    <color name="colorGrey">#868686</color>
 </resources>
