--- a/app/src/main/res/layout/single_exame_layout.xml
+++ b/app/src/main/res/layout/single_exame_layout.xml
@@ -96,6 +96,36 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:id="@+id/textData" />
+        <Space
+            android:layout_width="wrap_content"
+            android:layout_height="20dp" />
+
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:orientation="horizontal"
+            android:gravity="center">
+            <Button
+                android:id="@+id/btnEditarControleExame"
+                android:layout_width="100dp"
+                android:layout_height="wrap_content"
+                android:textSize="15sp"
+                android:textColor="@color/colorPrimaryWhite"
+                android:text="@string/botao_editar"
+                android:background="@color/colorPatternButton"/>
+            <Space
+                android:layout_width="20dp"
+                android:layout_height="wrap_content" />
+            <Button
+                android:id="@+id/btnExcluirControleExame"
+                android:layout_width="100dp"
+                android:layout_height="wrap_content"
+                android:textSize="15sp"
+                android:textColor="@color/colorPrimaryWhite"
+                android:text="@string/botao_excluir"
+                android:background="@color/colorPatternButton"/>
+        </LinearLayout>
 
     </LinearLayout>
 </RelativeLayout>
